# sandbox-onolab

./: .gitignore  README.md  index.html  pyproject.toml  tasks.py
.github/workflows/: deploy.yml  revert-deploy.yml
experiment/: explore_fault_seg.py  explore_salt_and_overthrust_models.py  explore_thebe.py  seismic_modeling1.py  seismic_modeling3.py  seismic_modeling3_with_devito_samples.py  tmp.py
frontend/: .prettierrc  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
lib/: download_dataset.py
lib/dataset/: __init__.py  load_BP2004_model.py  load_overthrust_model.py  load_salt_models.py  salt_and_overthrust_models.py
lib/misc/: __init__.py  colored_text.py  historical_value.py  misc.py  paths.py
lib/model/: __init__.py  vec2d.py
lib/open_fwi/: dataset.py  gan_train.py  network.py  pytorch_ssim.py  scheduler.py  test.py  train.py  transforms.py  utils.py  vis.py
lib/seismic/: __init__.py  fast_parallel_velocity_model_gradient_calculator.py  model.py  plotting.py  velocity_model_gradient_calculator.py
lib/signal_processing/: diff_operator.py  l_bfgs.py  misc.py  norm.py  pds.py  proximal_operator.py
lib/visualize/: __init__.py  array3d_to_gif.py  show_velocity_model.py
main/: index.html
main/assets/: RawPyodideWorker-BpAvC7HN.js  index-CTVMVbrO.js  index-D-sUfgwX.js  index-D3CdFDkQ.js  index-G4jWy_jq.js  index-P6agecEo.js  index-SbzPZbdM.js  (+1 more)
notebook/: tmp.ipynb
src/: GRSL-box-TV-constrained-FWI.py  SIP-box-TV-constrained-FWI.py  box-TV-constrained-FWI.py
thesis/: main.tex  references.bib  sips.sty
(+196 files in other folders)
